SILGen: Don't emit spurious warning with a Never-returning protocol witness thunk

Fixes <https://bugs.swift.org/browse/SR-2729>.